--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
-warning_flags = -Wall -Wextra -Wno-unused-parameter -Wshadow
-common_cflags = -O3 -ffast-math $(MFLAGS) $(warning_flags)
+warning_flags = -Wall -Wextra -Wshadow -Wno-unused-parameter
+common_cflags = -O3 -ffast-math -fvisibility=hidden $(warning_flags) $(MFLAGS)
 AM_CXXFLAGS = -std=c++14 $(common_cflags)
 
 AM_CPPFLAGS = $(VapourSynth_CFLAGS)
@@ -20,19 +20,13 @@ libyadifmod_la_SOURCES += Yadifmod/Yadifmod_SSE2.cpp \
                           Yadifmod/vectorclass/vectori256.h \
                           Yadifmod/vectorclass/vectori256e.h
 
-
 noinst_LTLIBRARIES = libavx.la libavx2.la
 
-
 libavx_la_SOURCES = Yadifmod/Yadifmod_AVX.cpp
-
 libavx_la_CXXFLAGS = $(AM_CXXFLAGS) -mavx
 
-
 libavx2_la_SOURCES = Yadifmod/Yadifmod_AVX2.cpp
-
-libavx2_la_CXXFLAGS = $(AM_CXXFLAGS) -mfma -mavx2
-
+libavx2_la_CXXFLAGS = $(AM_CXXFLAGS) -mavx2 -mfma
 
 libyadifmod_la_LIBADD = libavx.la libavx2.la
 endif
